# hqs_bot_tests

./: Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
qoqo_hqs_bot_test/: Cargo.toml  pyproject.toml
qoqo_hqs_bot_test/qoqo_hqs_bot_test/: DEPENDENCIES
roqoqo_hqs_bot_test/: Cargo.toml
