[package]
name = "roqoqo_hqs_bot_test"
version = "0.0.1"
edition = "2021"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
rust-version = "1.56"
categories = ["science", "simulation"]
homepage = "https://github.com/HQSquantumsimulations/qoqo_qryd"
repository = "https://github.com/mlodi-hqs/hqs_bot_tests"
include = [
    "src/*",
    "qoqo_qryd/*",
    "README.md",
    "pyproject.toml",
    "Cargo.toml",
    "LICENSE",
]

[lib]
name = "hqs_bot_test"
path = "src/lib.rs"
doctest = false

[dependencies]
qoqo = "1.6"
